--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -8,6 +8,7 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
     location ~ \.php$ {
+        try_files $uri =404;
         fastcgi_pass php:9000; 
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
