--- a/app/composer.json
+++ b/app/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "barryvdh/laravel-dompdf": "^2.2",
         "fideloper/proxy": "^4.4",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5"
     },
