--- a/app/composer.json
+++ b/app/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.4",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^6.20.26",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "league/commonmark": "^1.6"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
